JumpScript/tests/baselines/reference/duplicateIdentifierComputedName.errors.txt
tests/cases/compiler/duplicateIdentifierComputedName.jump(3,5): error TS2300: Duplicate identifier '["a"]'.


==== tests/cases/compiler/duplicateIdentifierComputedName.jump (1 errors) ====
    class C {
        ["a"]: string;
        ["a"]: string;
        ~~~~~
!!! error TS2300: Duplicate identifier '["a"]'.
    }
    